generating-functions/comment.err
  File "comment.cut", line 1
    from solutions import *
    ^
IndentationError: unexpected indent
